refactor: workout suggestion logic and remove unused payment method handling